<resources>
    <string name="jamesdsp" translatable="false">SiphonDSP</string>
    <string name="action_settings">Settings</string>
    <string name="action_parametric_eq">Parametric EQ</string>
    <string name="action_gain_limiter">Gains &amp; Delay</string>
    <string name="action_compressor">Compressor</string>
    <string name="action_crossover_tilt">Crossovers &amp; Tilt</string>
    <string name="action_presets">Presets</string>
    <string name="action_revert">Reset to defaults</string>
    <string name="action_blocked_apps">Excluded apps</string>
    <string name="notification_group_service">Service</string>
    <string name="notification_channel_service">Service notification</string>
    <string name="notification_channel_session_loss_alert">Session loss alert</string>
    <string name="notification_channel_permission_prompt">Permission prompt request</string>
    <string name="notification_channel_app_compat_alert">Incompatible app alert</string>
    <string name="notification_group_backup">Backup and restore</string>
    <string name="notification_channel_backup_progress">In progress</string>
    <string name="notification_channel_backup_complete">Complete</string>
    <string name="action_retry">Retry</string>
    <string name="action_fix">Fix issue</string>
    <string name="action_stop">Stop</string>
    <string name="notification_processing">Active apps: %1$s</string>
    <string name="notification_idle">Audio processing idle</string>
    <string name="notification_processing_title">Audio processing active</string>
    <string name="notification_processing_disabled_title">Audio processing disabled</string>
    <string name="notification_processing_legacy">Tap to open SiphonDSP manager</string>
    <string name="notification_request_permission_title">User action is required to launch SiphonDSP</string>
    <string name="notification_request_permission">Tap to grant capture permission and enable SiphonDSP\'s audio processing</string>
    <string name="session_control_loss_toast">SiphonDSP stopped due to audio session control loss. Please disable other audio effect apps.</string>
    <string name="session_control_loss_notification_title">Audio processing stopped. Another app is interfering with SiphonDSP.</string>
    <string name="session_control_loss_notification">Please disable all other apps that provide global audio effects before re-enabling SiphonDSP.</string>
    <string name="session_app_compat_toast">SiphonDSP stopped due to incompatible media app. Please check the notification to resolve this problem.</string>
    <string name="session_app_compat_notification_title">Audio processing stopped. Another app is interfering with SiphonDSP.</string>
    <string name="session_app_compat_notification">Tap this notification to resolve the problem.</string>
    <string name="capture_permission_revoked_toast">SiphonDSP has been stopped because the audio capture permission was revoked.</string>
    <string name="install">Install</string>
    <string name="update">Update</string>
    <string name="unknown_error">Unknown error</string>
    <string name="details">Details</string>
    <string name="actions">Actions</string>
    <string name="warning">Warning</string>
    <string name="success">Success</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="continue_action">Continue</string>
    <string name="tutorial">Tutorial</string>
    <string name="never_show_warning_again">Never show this warning again</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="value_not_set">Not set</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="no_activity_found">No Activity found to handle action</string>
    <string name="permission_allowed">Allowed</string>
    <string name="permission_not_allowed">Not allowed</string>
    <string name="preparing">Preparing…</string>
    <string name="error_projection_api_missing">Your device manufacturer has disabled the internal audio recording APIs. This application cannot work without them.</string>
    <string name="power_button_alt">Toggle audio processing</string>
    <string name="compander_enable">Dynamic range compander</string>
    <string name="compander_timeconstant">Time constant</string>
    <string name="compander_granularity">Granularity</string>
    <string name="compander_granularity_very_low">Very low</string>
    <string name="compander_granularity_low">Low</string>
    <string name="compander_granularity_medium">Medium</string>
    <string name="compander_granularity_high">High</string>
    <string name="compander_granularity_extreme">Extreme</string>
    <string name="compander_tftransforms">Time-frequency transform</string>
    <string name="compander_tftransforms_stft">Uniform (Short-time Fourier)</string>
    <string name="compander_tftransforms_continuous_wavelet">Multiresolution (Continuous wavelet, incomplete dual frame)</string>
    <string name="compander_tftransforms_undersampling">Pseudo multiresolution (Undersampling frame)</string>
    <string name="compander_tftransforms_time_domain">Pseudo multiresolution (Time domain, zero latency)</string>
    <string name="eq_enable">Multimodal equalizer</string>
    <string name="eq_filter_type">Filter type</string>
    <string name="eq_interpolator">Interpolator</string>
    <string name="eq_filter_type_fir_minimum">FIR Minimum phase</string>
    <string name="eq_filter_type_iir_4_order">IIR 4th order</string>
    <string name="eq_filter_type_iir_6_order">IIR 6th order</string>
    <string name="eq_filter_type_iir_8_order">IIR 8th order</string>
    <string name="eq_filter_type_iir_10_order">IIR 10th order</string>
    <string name="eq_filter_type_iir_12_order">IIR 12th order</string>
    <string name="eq_interpolator_chip">Piecewise Cubic Hermite Interpolating Polynomial</string>
    <string name="eq_interpolator_mha">Modified Hiroshi Akima spline</string>
    <string name="eq_preset_acoustic">Acoustic</string>
    <string name="eq_preset_bass">Bass</string>
    <string name="eq_preset_beats">Beats</string>
    <string name="eq_preset_classic">Classic</string>
    <string name="eq_preset_clear">Clear</string>
    <string name="eq_preset_deep">Deep</string>
    <string name="eq_preset_dubstep">Dubstep</string>
    <string name="eq_preset_electronic">Electronic</string>
    <string name="eq_preset_flat">Flat</string>
    <string name="eq_preset_hardstyle">Hardstyle</string>
    <string name="eq_preset_hiphop">Hip-Hop</string>
    <string name="eq_preset_jazz">Jazz</string>
    <string name="eq_preset_metal">Metal</string>
    <string name="eq_preset_movie">Movie</string>
    <string name="eq_preset_pop">Pop</string>
    <string name="eq_preset_rb">R&amp;B</string>
    <string name="eq_preset_rock">Rock</string>
    <string name="eq_preset_vocal">Vocal Booster</string>
    <string name="peq_enable">Parametric equalizer</string>
    <string name="peq_bands">Parametric EQ bands</string>
    <string name="title_activity_peq">Parametric equalizer</string>
    <string name="title_activity_gain_limiter">Gains &amp; Delay</string>
    <string name="title_activity_crossover_tilt">Crossovers &amp; Tilt</string>
    <string name="peq_add_band">Add</string>
    <string name="peq_add_band_spaced">&#160;&#160;Add filter&#160;</string>
    <string name="peq_import">Import</string>
    <string name="peq_export">Export</string>
    <string name="peq_edit_as_string">Edit as string</string>
    <string name="peq_reset">Reset</string>
    <string name="peq_reset_confirm_title">Are you sure?</string>
    <string name="peq_reset_confirm">Do you want to reset your parametric EQ settings?</string>
    <string name="peq_band_editor">Band editor</string>
    <string name="peq_band_list">Band list</string>
    <string name="peq_no_bands_defined">No filters in this scope</string>
    <string name="peq_delete_band">Delete band</string>
    <string name="peq_done_spaced">&#160;&#160;Done&#160;</string>
    <string name="peq_done">Done</string>
    <string name="peq_cancel_spaced">&#160;&#160;Discard&#160;</string>
    <string name="peq_cancel">Discard</string>
    <string name="peq_discard_changes_title">Discard changes and exit?</string>
    <string name="peq_discard_changes">The values are not valid or empty. Your changes can\'t be saved.\nDo you want to discard your changes and exit?</string>
    <string name="peq_frequency">Frequency</string>
    <string name="peq_frequency_range">Value between 20Hz and 20000Hz</string>
    <string name="peq_gain">Gain</string>
    <string name="peq_gain_range">Value between -30dB and 30dB</string>
    <string name="peq_q_factor">Q Factor</string>
    <string name="peq_q_range">Value between 0.1 and 30.0</string>
    <string name="peq_filter_type">Filter type</string>
    <string name="peq_filter_type_peaking">Peaking</string>
    <string name="peq_filter_type_low_shelf">Low shelf</string>
    <string name="peq_filter_type_high_shelf">High shelf</string>
    <string name="peq_filter_type_notch">Notch</string>
    <string name="peq_preview">Preview</string>
    <string name="peq_preview_collapsed">Preview (tap to expand)</string>
    <string name="peq_import_success">Successfully imported %d bands</string>
    <string name="peq_import_error">Failed to import file. Invalid EqualizerAPO format.</string>
    <string name="peq_export_success">Exported successfully</string>
    <string name="peq_edit_hint">EqualizerAPO format</string>
    <string name="peq_preamp">Preamp</string>
    <string name="peq_preamp_range">Value between -30dB and 0dB</string>
    <string name="bmw_dsp_gain_structure">Gain structure</string>
    <string name="bmw_dsp_headroom">Headroom</string>
    <string name="bmw_dsp_low_gain_l">Low gain L</string>
    <string name="bmw_dsp_low_gain_r">Low gain R</string>
    <string name="bmw_dsp_mid_gain_l">Mid gain L</string>
    <string name="bmw_dsp_mid_gain_r">Mid gain R</string>
    <string name="bmw_dsp_delay_polarity">Delay / polarity</string>
    <string name="bmw_dsp_invert_low_polarity">Invert low polarity</string>
    <string name="bmw_dsp_invert_mid_polarity">Invert mid polarity</string>
    <string name="bmw_dsp_mid_delay_l">Mid delay L</string>
    <string name="bmw_dsp_mid_delay_r">Mid delay R</string>
    <string name="bmw_dsp_low_delay_l">Low delay L</string>
    <string name="bmw_dsp_low_delay_r">Low delay R</string>
    <string name="bmw_dsp_crossovers">Crossovers</string>
    <string name="bmw_dsp_subsonic_lr4">Subsonic LR4</string>
    <string name="bmw_dsp_subsonic_lr4_subtitle">24 dB/oct Linkwitz-Riley protection</string>
    <string name="bmw_dsp_subsonic_freq">Subsonic freq</string>
    <string name="bmw_dsp_mute_low_band">Mute low band</string>
    <string name="bmw_dsp_low_lpf_freq">Low LPF freq</string>
    <string name="bmw_dsp_lr4_topology">LR4 topology</string>
    <string name="bmw_dsp_lr4_topology_subtitle">Off uses BW3 (3rd-order) instead of LR4 (4th-order)</string>
    <string name="bmw_dsp_mute_mid_band">Mute mid band</string>
    <string name="bmw_dsp_mid_hpf_freq">Mid HPF freq</string>
    <string name="bmw_dsp_tilt_section">Post-sum tonality tilt</string>
    <string name="bmw_dsp_tilt_active">Tilt active</string>
    <string name="translation_notice_summary">Please help us to translate this app into your language! Tap here to visit the project site on Crowdin.</string>
    <string name="translation_notice">Contribute translations</string>
    <string name="self_update_notice">New update available (%1$s)</string>
    <string name="self_update_notice_summary">Tap here to download and install the new update.</string>
</resources>