<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_peq_enable"
        android:title="@string/action_parametric_eq"
        app:showAsAction="always"
        app:actionLayout="@layout/toolbar_switch_action" />

    <item
        android:id="@+id/menu_undo"
        android:title="Undo"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_redo"
        android:title="Redo"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_edit_group"
        android:title="Edit"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/menu_add" android:title="@string/peq_add_band" />
            <item android:id="@+id/menu_reset" android:title="@string/peq_reset" />
            <item android:id="@+id/menu_edit_string" android:title="@string/peq_edit_as_string" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_import_export_group"
        android:title="Import / Export"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/menu_import_file" android:title="@string/peq_import" />
            <item android:id="@+id/menu_export_file" android:title="@string/peq_export" />
            <item android:id="@+id/menu_preset_import" android:title="Import preset" />
            <item android:id="@+id/menu_preset_export" android:title="Export preset" />
            <item android:id="@+id/menu_backup_import" android:title="Restore backup" />
            <item android:id="@+id/menu_backup_export" android:title="Backup" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_filter_tools"
        android:title="Filter tools"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_diagnostics"
        android:title="Diagnostics"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_graph_options"
        android:title="Graph options"
        app:showAsAction="never" />
</menu>
